--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 COMPOSE_PROJECT_NAME=mikro
-COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/cryptonodes.yaml:compose/daemons.yaml:compose/proxy.yaml
+COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/cryptonodes.yaml:compose/daemons.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/utils.yaml
