--- a/config/trading-ui.env
+++ b/config/trading-ui.env
@@ -1,5 +1,5 @@
 RAILS_ENV=development
-PLATFORM_ROOT_URL=http://api.wb.local/
-FRONTEND_ROOT_URL=http://api.wb.local/
+PLATFORM_ROOT_URL=http://www.wb.local/
+FRONTEND_ROOT_URL=http://www.wb.local/
 TITLE=Workbench Peatio
 PORT=8002
