--- a/config/traefik.toml
+++ b/config/traefik.toml
@@ -1,14 +1,11 @@
 logLevel = "INFO"
-defaultEntryPoints = ["https","http"]
+defaultEntryPoints = ["http"]
 
 [api]
 
 [entryPoints]
   [entryPoints.http]
   address = ":80"
-  [entryPoints.https]
-  address = ":443"
-  [entryPoints.https.tls]
 
 [retry]
 
@@ -17,13 +14,3 @@ endpoint = "unix:///var/run/docker.sock"
 domain = "local"
 watch = true
 exposedbydefault = false
-
-[acme]
-email = "support@heliostech.fr"
-storage = "acme.json"
-entryPoint = "https"
-OnHostRule = true
-usebindportip = true
-
-[acme.httpChallenge]
-entryPoint = "http"
