Adding custom domain var

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+APP_DOMAIN=wb.local
 COMPOSE_PROJECT_NAME=mikro
 COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/daemons.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/utils.yaml:compose/cryptonodes.yaml
