Reworked a bit config rendering

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 COMPOSE_PROJECT_NAME=mikro
+APP_DOMAIN=app.local
 COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/daemons.yaml:compose/frontend.yaml:compose/utils.yaml
