--- a/config/barong/seeds.yml
+++ b/config/barong/seeds.yml
@@ -7,10 +7,12 @@
 # Note: email is the only required field here.
 users:
   - email: admin@barong.io
+    password: 0lDHd9ufs9t@
     role: admin
     state: active
     level: 3
   - email: john@barong.io
+    password: Am8icnzEI3d!
     role: member
     state: active
     level: 3
