--- a/config/peatio/seed/currencies.yml
+++ b/config/peatio/seed/currencies.yml
@@ -1,64 +1,135 @@
-- id:                   usd
-  symbol:               '$'
-  type:                 fiat
-  precision:            8
-  base_factor:          1
-  enabled:              true
-  quick_withdraw_limit: 1000
-  deposit_fee:          0
-  withdraw_fee:         0
-  min_deposit_amount:   0
+- id:                     usd
+  symbol:                 '$'
+  type:                   fiat
+  precision:              2
+  base_factor:            1
+  enabled:                true
+  min_deposit_amount:     0
+  min_collection_amount:  0
+  withdraw_limit_24h:     100
+  withdraw_limit_72h:     200
+  deposit_fee:            0
+  withdraw_fee:           0
 
-- id:                   eur
-  symbol:               '€'
-  type:                 fiat
-  precision:            8
-  base_factor:          1
-  enabled:              true
-  quick_withdraw_limit: 1000
-  deposit_fee:          0
-  withdraw_fee:         0
-  min_deposit_amount:   0
+- id:                     btc
+  blockchain_key:         btc-testnet
+  symbol:                 '฿'
+  type:                   coin
+  precision:              8
+  base_factor:            100_000_000
+  enabled:                true
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.0000356
+  min_collection_amount:  0.0000356
+  withdraw_limit_24h:     0.1
+  withdraw_limit_72h:     0.2
+  deposit_fee:            0
+  withdraw_fee:           0
+  options:                {}
 
-- id:                   eth
-  symbol:               'Ξ'
-  type:                 coin
-  precision:            8
-  base_factor:          1_000_000_000_000_000_000
-  enabled:              true
-  quick_withdraw_limit: 2
-  deposit_fee:          0
-  withdraw_fee:         0
-  min_deposit_amount:   0.00021
-  blockchain_key:       eth-rinkeby
+- id:                     xrp
+  blockchain_key:         xrp-testnet
+  symbol:                 'ꭆ'
+  type:                   coin
+  precision:              8
+  base_factor:            1_000_000
+  enabled:                true
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.00012
+  min_collection_amount:  0.00012
+  withdraw_limit_24h:     100
+  withdraw_limit_72h:     200
+  deposit_fee:            0
+  withdraw_fee:           0
+  options:                {}
+
+- id:                     bch
+  blockchain_key:         bch-testnet
+  symbol:                 '฿'
+  type:                   coin
+  precision:              8
+  base_factor:            100_000_000
+  enabled:                true
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.0000748
+  min_collection_amount:  0.0000748
+  withdraw_limit_24h:     0.1
+  withdraw_limit_72h:     0.2
+  deposit_fee:            0
+  withdraw_fee:           0
+  options:                {}
+
+- id:                     ltc
+  blockchain_key:         ltc-testnet
+  symbol:                 'Ł'
+  type:                   coin
+  precision:              8
+  base_factor:            100_000_000
+  enabled:                true
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.0004488
+  min_collection_amount:  0.0004488
+  withdraw_limit_24h:     0.5
+  withdraw_limit_72h:     1.2
+  deposit_fee:            0
+  withdraw_fee:           0
+  options:                {}
+
+- id:                     dash
+  blockchain_key:         dash-testnet
+  symbol:                 'Đ'
+  type:                   coin
+  precision:              8
+  base_factor:            100_000_000
+  enabled:                true
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.0000226
+  min_collection_amount:  0.0000226
+  withdraw_limit_24h:     0.2
+  withdraw_limit_72h:     0.5
+  deposit_fee:            0
+  withdraw_fee:           0
+  options:                {}
+
+- id:                     eth
+  blockchain_key:         eth-rinkeby
+  symbol:                 'Ξ'
+  type:                   coin
+  precision:              8
+  base_factor:            1_000_000_000_000_000_000
+  enabled:                true
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  min_deposit_amount:     0.00021
+  min_collection_amount:  0.00021
+  withdraw_limit_24h:     0.2
+  withdraw_limit_72h:     0.5
+  deposit_fee:            0
+  withdraw_fee:           0
+  options:                {}
+
+- id:                     trst
+  blockchain_key:         eth-rinkeby
+  symbol:                 'Ξ'
+  type:                   coin
+  precision:              8
+  base_factor:            1_000_000 # IMPORTANT: Don't forget to update this variable according
+  enabled:                true      #            to your ERC20-based currency requirements
+  # Deposits with less amount are skipped during blockchain synchronization.
+  # We advise to set value 10 times bigger than the network fee to prevent losses.
+  # NOTE: Network fee is paid in ETH but min_deposit_amount is in TRST.
+  min_deposit_amount:     0.00021
+  min_collection_amount:  0.00021
+  withdraw_limit_24h:     300      #            (usually can be found on the official website).
+  withdraw_limit_72h:     600
+  deposit_fee:            0
+  withdraw_fee:           0
   options:
-    case_sensitive:                   false
-    min_confirmations:                1
-    supports_cash_addr_format:        false
-    supports_hd_protocol:             false
-    allow_multiple_deposit_addresses: false
-    api_client: ETH
-    json_rpc_endpoint:        http://geth:8545
-    wallet_url_template:      https://rinkeby.etherscan.io/address/#{address}
-    transaction_url_template: https://rinkeby.etherscan.io/tx/#{txid}
-
-- id:                   trst
-  symbol:               'Ξ'
-  type:                 coin
-  precision:            8
-  base_factor:          1_000_000
-  enabled:              true
-  quick_withdraw_limit: 3000
-  min_deposit_amount:   1.7
-  blockchain_key:       eth-rinkeby
-  options:
-    case_sensitive:                   false
-    min_confirmations:                1
-    supports_cash_addr_format:        false
-    supports_hd_protocol:             false
-    allow_multiple_deposit_addresses: false
-    api_client: ERC20
-    json_rpc_endpoint:        http://geth:8545
-    erc20_contract_address:   '0x87099adD3bCC0821B5b151307c147215F839a110'
-    wallet_url_template:      https://rinkeby.etherscan.io/address/#{address}
-    transaction_url_template: https://rinkeby.etherscan.io/tx/#{txid}
+    #
+    # ERC20 configuration.
+    erc20_contract_address: '0x0000000000000000000000000000000000000000' # Always wrap this value in quotes!
