--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 COMPOSE_PROJECT_NAME=mikro
 APP_DOMAIN=app.local
 COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/daemons.yaml:compose/frontend.yaml:compose/utils.yaml
-PEATIO_IMAGE=rubykube/peatio:2.0.8-alpha
-BARONG_IMAGE=rubykube/barong:2.0.15-alpha
-FRONTEND_IMAGE=rubykube/mikroapp:latest
+PEATIO_IMAGE=rubykube/peatio:2.0.10-alpha
+BARONG_IMAGE=rubykube/barong:2.0.21-alpha
+FRONTEND_IMAGE=rubykube/mikroapp:v0.1.1
