--- a/compose/frontend.yaml
+++ b/compose/frontend.yaml
@@ -11,12 +11,9 @@ services:
       traefik.port: 3000
 
   tower:
-    image: quay.io/openware/wio:0.1.0
-    user: "${UID}:${GID}"
-    command: "-d /home/app/build -s 1"
-    volumes:
-      - ../vendor/tower:/home/app
+    image: "${TOWER_IMAGE}"
     labels:
       traefik.enable: true
       traefik.frontend.rule: "PathPrefix:/tower;Host:www.${APP_DOMAIN}"
       traefik.port: 8080
+
