--- a/compose/frontend.yaml
+++ b/compose/frontend.yaml
@@ -3,6 +3,8 @@ version: '3.6'
 services:
   frontend:
     image: "${FRONTEND_IMAGE}"
+    volumes:
+      - ../config/frontend/env.js:/home/node/public/env.js
     labels:
       traefik.enable: true
       traefik.frontend.rule: "PathPrefix:/;Host:www.${APP_DOMAIN}"
