--- a/compose/proxy.yaml
+++ b/compose/proxy.yaml
@@ -2,7 +2,7 @@ version: '3.6'
 
 services:
   proxy:
-    image: traefik
+    image: traefik:1.7.6
     ports:
       - "80:80"
       - "443:443"
@@ -15,7 +15,6 @@ services:
         aliases:
           - www.${APP_DOMAIN}
           - peatio.${APP_DOMAIN}
-          - barong.${APP_DOMAIN}
           - ws.ranger.${APP_DOMAIN}
           - eth.${APP_DOMAIN}
           - tower.${APP_DOMAIN}
