--- a/config/gateway/ambassador.yaml
+++ b/config/gateway/ambassador.yaml
@@ -1,4 +1,8 @@
 apiVersion: ambassador/v0
 kind: Module
 name: ambassador
-config: {}
+config:
+  cors:
+    origins: "*"
+    methods: POST, GET, OPTIONS
+    max_age: "3600"
