Fix issue with vendor & Switch name to "MicroKube" (#28)
* Fix issue with vendor

* Switch name to "MicroKube"

* Bump mikroapp version to 0.1.3

* Remove trash comment

* Fix rake task service:all

* Update docker images tags

--- a/config/app.yml
+++ b/config/app.yml
@@ -1,6 +1,9 @@
 app:
-  name: "Mikro"
+  name: "MicroKube"
   domain: "app.local"
 ssl:
   enabled: true
   email: "support@example.com"
+vendor:
+  frontend: https://github.com/rubykube/mikroapp.git
+  tower: https://github.com/rubykube/tower.git
