--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-COMPOSE_PROJECT_NAME=mikro
+COMPOSE_PROJECT_NAME=microkube
 APP_DOMAIN=app.local
 COMPOSE_FILE=compose/app.yaml:compose/backend.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/daemons.yaml:compose/frontend.yaml:compose/utils.yaml
-PEATIO_IMAGE=rubykube/peatio:2.0.10-alpha
-BARONG_IMAGE=rubykube/barong:2.0.21-alpha
-FRONTEND_IMAGE=rubykube/mikroapp:v0.1.1
-TOWER_IMAGE=rubykube/tower:v0.1.1
+PEATIO_IMAGE=rubykube/peatio:2.0.12-alpha
+BARONG_IMAGE=rubykube/barong:2.0.23-alpha
+FRONTEND_IMAGE=rubykube/mikroapp:v0.1.3
+TOWER_IMAGE=rubykube/tower:0.1.1
