--- a/compose/gateway.yaml
+++ b/compose/gateway.yaml
@@ -12,5 +12,5 @@ services:
       - '8877:8877'
     labels:
       traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/api/, /admin, /assets/;Host:www.${APP_DOMAIN},peatio.${APP_DOMAIN}"
+      traefik.frontend.rule: "PathPrefix:/api/, /admin, /assets/;Host:www.${APP_DOMAIN}"
       traefik.port: 80
