--- a/config/app.yml
+++ b/config/app.yml
@@ -4,6 +4,11 @@ app:
 ssl:
   enabled: true
   email: "support@example.com"
+images:
+  peatio: rubykube/peatio:2.0.12-alpha
+  barong: rubykube/barong:2.0.23-alpha
+  frontend: rubykube/mikroapp:0.1.5
+  tower: rubykube/tower:0.1.1
 vendor:
   frontend: https://github.com/rubykube/mikroapp.git
   tower: https://github.com/rubykube/tower.git
