--- a/config/app.yml
+++ b/config/app.yml
@@ -9,6 +9,7 @@ images:
   barong: rubykube/barong:2.0.31-alpha
   frontend: rubykube/mikroapp:0.1.5
   tower: rubykube/tower:0.1.1
+  postmaster: quay.io/shal/pigeon:v0.0.2
 vendor:
   frontend: https://github.com/rubykube/mikroapp.git
 terraform:
@@ -23,3 +24,4 @@ twilio:
   phone_number: "+15005550000"
   account_sid: "changeme"
   auth_token: "changeme"
+sendgrid_api_key: changeme
