Change default value for load dump

--- a/config/app.yml
+++ b/config/app.yml
@@ -11,7 +11,7 @@ images:
   frontend: rubykube/mikroapp:0.1.5
   tower: rubykube/tower:0.1.1
   postmaster: quay.io/openware/postmaster:0.0.1
-load_dump: true
+load_dump: false
 vendor:
   frontend: https://github.com/rubykube/mikroapp.git
 storage:
