Add configuration for baseapp
* Add recaptcha configuration to barong

--- a/config/app.yml
+++ b/config/app.yml
@@ -8,7 +8,7 @@ ssl:
 images:
   peatio: rubykube/peatio:2.0.20-alpha
   barong: rubykube/barong:2.0.37-alpha
-  frontend: rubykube/mikroapp:0.1.5
+  frontend: gcr.io/openware-production/baseapp:0.1.56
   tower: rubykube/tower:0.1.8
   postmaster: quay.io/openware/postmaster:0.0.3
 vendor:
@@ -30,4 +30,7 @@ twilio:
   phone_number: "+15005550000"
   account_sid: "changeme"
   auth_token: "changeme"
+recaptcha:
+  siteKey: "changeme"
+  secretKey: "changeme"
 sendgrid_api_key: changeme
