--- a/config/app.yml
+++ b/config/app.yml
@@ -31,6 +31,7 @@ twilio:
   account_sid: "changeme"
   auth_token: "changeme"
 recaptcha:
+  type: "none"
   siteKey: "changeme"
   secretKey: "changeme"
 sendgrid_api_key: changeme
