Add ability to deploy applogic (#25)
* Add opportunity to deploy applogic

* Update gitignore file and add applogic directory to config

* Add applogic to services in webhook, change ruby versionin Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ config/acme.json
 config/frontend/*.js
 config/gateway/mapping.yaml
 config/peatio/management_api_v1.yml
+config/barong/management_api.yml
 config/toolbox.yaml
 config/traefik.toml
 config/*.env
@@ -9,6 +10,8 @@ config/secrets/*
 !config/secrets/.gitkeep
 config/peatio/seed/*
 !config/peatio/seed/.gitkeep
+config/applogic/*
+!config/applogic/.gitkeep
 vendor/
 !vendor/.gitkeep
 .terraform/
