--- a/config/barong/authz_rules.yml
+++ b/config/barong/authz_rules.yml
@@ -7,6 +7,7 @@ rules:
     - api/v2/barong/identity
     - api/v2/peatio/public
     - api/v2/ranger/public
+    - api/v2/applogic/public
   block:
     - api/v2/barong/management
     - api/v2/peatio/management
