Feature: Automate the Superset provisioning (#40)
- Update Superset to version 0.28.1
- Remove redundant MySQL operations
- Add volumes to persist the Superset DB

--- a/config/app.yml
+++ b/config/app.yml
@@ -60,6 +60,10 @@ wallets:
     nsig: 1
     max_balance: 1000.0
     secret: changeme
+superset:
+  email: superset-admin@openware.com
+  username: admin
+  password: changeme
 arke:
   strategy:
     type: copy
