Enhancement: Add Openware license key config to app.yml

--- a/config/app.yml
+++ b/config/app.yml
@@ -66,6 +66,7 @@ superset:
   password: changeme
 tenko:
   url: "https://www.openware.com/api/v2/tenko"
+  license_key: ""
 arke:
   strategy:
     type: copy
