Feature: Switch the default frontend image to baseapp-lite

--- a/config/app.yml
+++ b/config/app.yml
@@ -8,7 +8,7 @@ ssl:
 images:
   peatio: rubykube/peatio:2.2.25
   barong: rubykube/barong:2.2.22
-  frontend: gcr.io/openware-production/baseapp:2.2.18
+  frontend: quay.io/openware/baseapp-lite
   tower: gcr.io/openware-production/tower:2.2.8
   postmaster: quay.io/openware/postmaster:2.2.2
   applogic: rubykube/applogic:latest
