--- a/config/app.yml
+++ b/config/app.yml
@@ -11,7 +11,7 @@ license:
 images:
   peatio: rubykube/peatio:2.2.25
   barong: rubykube/barong:2.2.22
-  frontend: quay.io/openware/baseapp-lite
+  frontend: quay.io/openware/baseapp-lite:2.2.23
   tower: gcr.io/openware-production/tower:2.2.8
   postmaster: quay.io/openware/postmaster:2.2.2
   applogic: rubykube/applogic:latest
