--- a/config/app.yml
+++ b/config/app.yml
@@ -18,7 +18,7 @@ vendor:
   frontend: git@github.com:openware/baseapp.git
 storage:
   provider: "Google"
-  bucketName: "microkube-barong-docs-bucket"
+  bucketName: "opendax-barong-docs-bucket"
   accessKey: "**********"
   secretKey: "**********"
 twilio:
@@ -50,11 +50,11 @@ wallets:
     max_balance: 1000.0
     secret: changeme
 terraform:
-  credentials: "~/safe/microkube.json"
-  project: "example-microkube"
+  credentials: "~/safe/opendax.json"
+  project: "example-opendax"
   region: "europe-west4"
   zone: "europe-west4-a"
-  instance_name: "microkube-cloud"
+  instance_name: "opendax-cloud"
   machine_type: "n1-standard-4"
   image: "debian-cloud/debian-9"
 
