--- a/config/app.yml
+++ b/config/app.yml
@@ -54,11 +54,22 @@ wallets:
     max_balance: 1000.0
     secret: changeme
 terraform:
+  provider: "gcp"
   credentials: "~/safe/opendax.json"
   project: "example-opendax"
   region: "europe-west4"
   zone: "europe-west4-a"
-  instance_name: "opendax-cloud"
-  machine_type: "n1-standard-4"
-  image: "debian-cloud/debian-9"
-
+  instance_name: "opendax-pro"
+  db_name: "opendax-db"
+  core_machine_type: "n1-standard-8"
+  cryptonode_machine_type: "n1-standard-2"
+  cryptonode_disk_size: "400"
+  core_image: "debian-cloud/debian-9"
+  bitcoind_image: "debian-cloud/debian-9"
+  parity_image: "debian-cloud/debian-9"
+bitcoind:
+  rpcport: 18332
+  port: 18333
+parity:
+  rpcport: 8545
+  port: 30303
