--- a/config/app.yml
+++ b/config/app.yml
@@ -20,6 +20,11 @@ vendor:
 vault:
   mode: development
   token: changeme
+database:
+  host: db
+  port: 3306
+  user: root
+  password: changeme
 storage:
   provider: "Google"
   bucketName: "opendax-barong-docs-bucket"
