Feature: Make Vault production-ready
* Disable redundant automated config of Vault

--- a/config/app.yml
+++ b/config/app.yml
@@ -26,6 +26,8 @@ database:
   port: 3306
   user: root
   password: changeme
+vault:
+  token: changeme
 storage:
   provider: "Google"
   bucketName: "opendax-pro-bucket"
