--- a/.drone.yml
+++ b/.drone.yml
@@ -11,23 +11,20 @@ steps:
     event:
       - pull_request
 - name: Bump and tag
-  image: ruby:2.6.1
+  image: quay.io/openware/sdk-tools:0.0.3
   environment:
+    BRANCH_NAME: ${DRONE_BRANCH}
+    REPO_NAME: ${DRONE_REPO}
     BOT_USERNAME: kite-bot
     BOT_NAME: Kite Bot
     BOT_EMAIL: kite-bot@heliostech.fr
     GITHUB_API_KEY:
       from_secret: kite_bot_key
   commands:
-    - gem install bump
-    - git config --global user.name "  Kite Bot"
-    - git config --global user.email "kite-bot@heliostech.fr"
-    - git remote add authenticated-origin https://kite-bot:$GITHUB_API_KEY@github.com/${DRONE_REPO}
-    - git fetch authenticated-origin
-    - bump patch --commit-message 'Bump [ci skip]'
-    - git tag $(cat VERSION)
-    - git push authenticated-origin master
-    - git push --tags authenticated-origin
+    - BUNDLE_GEMFILE=/sdk/Gemfile bundle exec rake --rakefile=/sdk/Rakefile release:push
   when:
     event: [push]
     branch: [master]
+
+image_pull_secrets:
+  - dockerconfigjson
