Feature: add the ability to use vault in the dev and prod mode

--- a/config/app.yml
+++ b/config/app.yml
@@ -17,6 +17,7 @@ images:
 vendor:
   frontend: git@github.com:openware/baseapp.git
 vault:
+  mode: development
   token: changeme
 storage:
   provider: "Google"
