--- a/config/barong/authz_rules.yml
+++ b/config/barong/authz_rules.yml
@@ -8,6 +8,7 @@ rules:
     - api/v2/peatio/public
     - api/v2/ranger/public
     - api/v2/applogic/public
+    - api/v2/arke/public
   block:
     - api/v2/barong/management
     - api/v2/peatio/management
